--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ buildscript {
 	}
 }
 
+plugins {
+	id "org.sonarqube" version "2.2.1"
+}
+
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 
