--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ language: java
 jdk:
   - oraclejdk8
 
-after_success: ./gradlew sonarqube
+after_success: ./gradlew sonarqube -Dsonar.host.url=$SONAR_ENDPOINT -Dsonar.login=$SONAR_TOKEN -Dsonar.verbose=true
